--- a/Year 2023/WWW Techniques/SandBox/index.html
+++ b/Year 2023/WWW Techniques/SandBox/index.html
@@ -8,13 +8,23 @@
 <body>
 
 <div class="header">
-    <p>My favorite music</p>
+    <p id="demo">Touhou plushie</p>
+    <button onclick="console.log(5 + 6 + ' hi')" type="button">Try it</button>
+
+    <script>
+        let carName = "Volvo";
+        document.getElementById("demo").innerHTML = carName;
+    </script>
+
 </div>
 
 <footer class="buttons">
     <div>
-        <a href="https://spyware.neocities.org/articles/discord.html"><img class="siteButton"
-                                                                           src="images/buttons/discord.gif"></a>
+        <a href="https://spyware.neocities.org/articles/discord.html">
+            <img alt="discordIsBad" class="siteButton" src="images/buttons/discord.gif">
+        </a>
+        <img alt="animegay" src="images/buttons/animegay.gif">
+        <img alt="ashpilled" src="images/buttons/emacs.png">
     </div>
 </footer>
 
