Ohh god please help me

--- a/Year 2023/WWW Techniques/TouhouProject/index.html
+++ b/Year 2023/WWW Techniques/TouhouProject/index.html
@@ -8,13 +8,7 @@
 <body>
 
 <div class="header">
-    <p id="demo">Touhou plushie</p>
-    <button onclick="console.log(5 + 6 + ' hi')" type="button">Try it</button>
-
-    <script>
-        let carName = "Volvo";
-        document.getElementById("demo").innerHTML = carName;
-    </script>
+    <p>Touhou plushie</p>
 
 </div>
 
@@ -25,6 +19,8 @@
         </a>
         <img alt="animegay" src="images/buttons/animegay.gif">
         <img alt="ashpilled" src="images/buttons/emacs.png">
+        <img src="images/buttons/apple_fatal_error.gif">
+        <img alt="" src="images/buttons/child.gif">
     </div>
 </footer>
 
