--- a/Year 2023/WWW Techniques/TouhouProject/index.html
+++ b/Year 2023/WWW Techniques/TouhouProject/index.html
@@ -9,11 +9,26 @@
 
 <div class="header">
     <p>Touhou plushie</p>
+</div>
+
+<div class="box">
+    <div class="spacer">
+        <img class="zoom" src="images/fumos/baka.jpeg">
+    </div>
+    <div class="spacer">
+        <img class="zoom" src="images/fumos/reimu.jpeg">
+    </div>
+    <div class="spacer">
+        <img class="zoom" src="images/fumos/patchouli.png">
+    </div>
+    <div class="spacer">
+        <img class="zoom" src="images/fumos/reisen.jpeg">
+    </div>
 
 </div>
 
-<footer class="buttons">
-    <div>
+<div class="footer">
+    <div class="buttons">
         <a href="https://spyware.neocities.org/articles/discord.html">
             <img alt="discordIsBad" class="siteButton" src="images/buttons/discord.gif">
         </a>
@@ -22,7 +37,7 @@
         <img src="images/buttons/apple_fatal_error.gif">
         <img alt="" src="images/buttons/child.gif">
     </div>
-</footer>
+</div>
 
 </body>
 </html>
