--- a/Year 2023/WWW Techniques/TouhouProject/index.html
+++ b/Year 2023/WWW Techniques/TouhouProject/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Title</title>
     <link href="styles.css" rel="stylesheet" type="text/css"/>
     <meta charset="UTF-8">
-    <title>Title</title>
 </head>
 <body>
 
 <div class="header box">
-    <p>Touhou plushie</p>
+
+    <div>
+
+    </div>
+    <div>
+        <p>Touhou plushies</p>
+    </div>
+
 </div>
 
 <div class="box">
