--- a/Year 2023/WWW Techniques/TouhouProject/index.html
+++ b/Year 2023/WWW Techniques/TouhouProject/index.html
@@ -9,9 +9,7 @@
 
 <div class="header box">
 
-    <div>
-
-    </div>
+    <img alt="cute-rat" src="images/nyn-rat-nyn.gif" style="width:42px;height:42px;">
     <div>
         <p>Touhou plushies</p>
     </div>
@@ -20,16 +18,20 @@
 
 <div class="box">
     <div class="spacer">
-        <img class="zoom" src="images/fumos/baka.jpeg">
+        <img class="zoom" height="437" src="images/fumos/baka.png"
+             width="240">
     </div>
     <div class="spacer">
-        <img class="zoom" src="images/fumos/reimu.jpeg">
+        <img class="zoom" height="437" src="images/fumos/reimu.png"
+             width="240">
     </div>
     <div class="spacer">
-        <img class="zoom" src="images/fumos/patchouli.png">
+        <img class="zoom" height="437" src="images/fumos/patchouli.png"
+             width="240">
     </div>
     <div class="spacer">
-        <img class="zoom" src="images/fumos/reisen.jpeg">
+        <img class="zoom" height="437" src="images/fumos/rabit.png"
+             width="300">
     </div>
 
 </div>
