--- a/Year 2023/WWW Techniques/TouhouProject/index.html
+++ b/Year 2023/WWW Techniques/TouhouProject/index.html
@@ -9,10 +9,11 @@
 
 <div class="header box">
 
-    <img alt="cute-rat" src="images/nyn-rat-nyn.gif" style="width:42px;height:42px;">
+    <img alt="cute-rat" src="images/nyn-nazrin.gif" style="width:80px;height:80px;">
     <div>
         <p>Touhou plushies</p>
     </div>
+    <img alt="cute-rat" src="images/nyn-rat-nyn.gif" style="width:80px;height:80px;">
 
 </div>
 
