--- a/Year 2023/WWW Techniques/TouhouProject/index.html
+++ b/Year 2023/WWW Techniques/TouhouProject/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<div class="header box">
+<div class="header box gtc3">
 
     <img alt="cute-rat" src="images/nyn-nazrin.gif" style="width:80px;height:80px;">
     <div>
@@ -17,24 +17,18 @@
 
 </div>
 
-<div class="box">
-    <div class="spacer">
-        <img class="zoom" height="437" src="images/fumos/baka.png"
-             width="240">
-    </div>
-    <div class="spacer">
-        <img class="zoom" height="437" src="images/fumos/reimu.png"
-             width="240">
-    </div>
-    <div class="spacer">
-        <img class="zoom" height="437" src="images/fumos/patchouli.png"
-             width="240">
-    </div>
-    <div class="spacer">
-        <img class="zoom" height="437" src="images/fumos/rabit.png"
-             width="300">
-    </div>
+<div class="header box dude4">
+    <img class="zoom" height="437" src="images/fumos/baka.png"
+         width="240">
 
+    <img class="zoom" height="437" src="images/fumos/reimu.png"
+         width="240">
+
+    <img class="zoom" height="437" src="images/fumos/patchouli.png"
+         width="240">
+
+    <img class="zoom" height="437" src="images/fumos/rabit.png"
+         width="300">
 </div>
 
 <div class="footer">
