--- a/Year 2023/WWW Techniques/TouhouProject/index.html
+++ b/Year 2023/WWW Techniques/TouhouProject/index.html
@@ -36,10 +36,13 @@
         <a href="https://spyware.neocities.org/articles/discord.html">
             <img alt="discordIsBad" class="siteButton" src="images/buttons/discord.gif">
         </a>
-        <img alt="animegay" src="images/buttons/animegay.gif">
-        <img alt="ashpilled" src="images/buttons/emacs.png">
-        <img src="images/buttons/apple_fatal_error.gif">
-        <img alt="" src="images/buttons/child.gif">
+        <img src="images/buttons/zanarkand.gif">
+        <img src="images/buttons/child.gif">
+        <img src="images/buttons/apple_fatal_error.gif" alt="">
+        <img src="images/buttons/emacs.png" alt="">
+        <img src="images/buttons/animegay.gif" alt="">
+        <img src="images/buttons/bluepantsu.gif" alt="">
+        <img src="images/buttons/woaw.gif" alt="">
     </div>
 </div>
 
