--- a/Year 2023/WWW Techniques/TouhouProject/index.html
+++ b/Year 2023/WWW Techniques/TouhouProject/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Title</title>
+    <title>Touhou</title>
     <link href="styles.css" rel="stylesheet" type="text/css"/>
     <meta charset="UTF-8">
 </head>
