--- a/Year 2023/WWW Techniques/TouhouProject/index.html
+++ b/Year 2023/WWW Techniques/TouhouProject/index.html
@@ -6,45 +6,18 @@
     <meta charset="UTF-8">
 </head>
 <body>
-
-<div class="header box gtc3">
-
-    <img alt="cute-rat" src="images/nyn-nazrin.gif" style="width:80px;height:80px;">
-    <div>
-        <p>Touhou plushies</p>
-    </div>
-    <img alt="cute-rat" src="images/nyn-rat-nyn.gif" style="width:80px;height:80px;">
-
-</div>
-
-<div class="header box dude4">
-    <img class="zoom" height="437" src="images/fumos/baka.png"
-         width="240">
-
-    <img class="zoom" height="437" src="images/fumos/reimu.png"
-         width="240">
-
-    <img class="zoom" height="437" src="images/fumos/patchouli.png"
-         width="240">
-
-    <img class="zoom" height="437" src="images/fumos/rabit.png"
-         width="300">
-</div>
-
-<div class="footer">
-    <div class="buttons">
-        <a href="https://spyware.neocities.org/articles/discord.html">
-            <img alt="discordIsBad" class="siteButton" src="images/buttons/discord.gif">
-        </a>
-        <img src="images/buttons/zanarkand.gif">
-        <img src="images/buttons/child.gif">
-        <img src="images/buttons/apple_fatal_error.gif" alt="">
-        <img src="images/buttons/emacs.png" alt="">
-        <img src="images/buttons/animegay.gif" alt="">
-        <img src="images/buttons/bluepantsu.gif" alt="">
-        <img src="images/buttons/woaw.gif" alt="">
+<div class="box">
+    <div class="header">
+        <div>
+            1
+        </div>
+        <div>
+            2
+        </div>
+        <div>
+            3
+        </div>
     </div>
 </div>
-
 </body>
 </html>
