--- a/Year 2023/WWW Techniques/TouhouProject/index.html
+++ b/Year 2023/WWW Techniques/TouhouProject/index.html
@@ -12,12 +12,15 @@
             1
         </div>
         <div>
-            2
+            Touhou fumos
         </div>
         <div>
             3
         </div>
     </div>
+</div>
+<div class="box">
+
 </div>
 </body>
 </html>
