--- a/Year 2023/WWW Techniques/TouhouProject/index.html
+++ b/Year 2023/WWW Techniques/TouhouProject/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Touhou</title>
+    <title>Touhou fumos</title>
     <link href="styles.css" rel="stylesheet" type="text/css"/>
     <meta charset="UTF-8">
 </head>
@@ -20,6 +20,10 @@
     </div>
 </div>
 <div class="box">
+    <div class="row">
+        <img src="images/fumos/baka.png">
+        <img src="images/fumos/rabit.png">
+    </div>
 
 </div>
 </body>
