--- a/Year 2023/WWW Techniques/TouhouProject/index.html
+++ b/Year 2023/WWW Techniques/TouhouProject/index.html
@@ -20,11 +20,20 @@
     </div>
 </div>
 <div class="box">
-    <div class="row">
-        <img src="images/fumos/baka.png">
-        <img src="images/fumos/rabit.png">
+    <div class="fumos">
+        <div class="column">
+            <img alt="reimu" src="images/fumos/reimu.png" style="width:100%">
+        </div>
+        <div class="column">
+            <img alt="patchouli" src="images/fumos/patchouli.png" style="width:100%">
+        </div>
+        <div class="column">
+            <img alt="rabit" src="images/fumos/rabit.png" style="width:100%">
+        </div>
+        <div class="column">
+            <img alt="baka" src="images/fumos/baka.png" style="width:100%">
+        </div>
     </div>
-
 </div>
 </body>
 </html>
