--- a/Year 2023/WWW Techniques/TouhouProject/index.html
+++ b/Year 2023/WWW Techniques/TouhouProject/index.html
@@ -22,16 +22,16 @@
 <div class="box">
     <div class="fumos">
         <div class="column">
-            <img alt="reimu" src="images/fumos/reimu.png" style="width:100%">
+            <img alt="reimu" src="images/fumos/reimu.png" style="width:100%" width="350" height="500">
         </div>
         <div class="column">
-            <img alt="patchouli" src="images/fumos/patchouli.png" style="width:100%">
+            <img alt="patchouli" src="images/fumos/patchouli.png" style="width:100%" width="350" height="500">
         </div>
         <div class="column">
-            <img alt="rabit" src="images/fumos/rabit.png" style="width:100%">
+            <img alt="rabit" src="images/fumos/rabit.png" style="width:100%" width="350" height="500">
         </div>
         <div class="column">
-            <img alt="baka" src="images/fumos/baka.png" style="width:100%">
+            <img alt="baka" src="images/fumos/baka.png" style="width:100%" width="350" height="500">
         </div>
     </div>
 </div>
