--- a/Year 2023/WWW Techniques/TouhouProject/index.html
+++ b/Year 2023/WWW Techniques/TouhouProject/index.html
@@ -21,17 +21,17 @@
 </div>
 <div class="box">
     <div class="fumos">
-        <div class="column">
-            <img alt="reimu" src="images/fumos/reimu.png" style="width:100%" width="350" height="500">
+        <div class="column zoom">
+            <img alt="reimu" height="500" src="images/fumos/reimu.png" style="width:100%" width="350">
         </div>
-        <div class="column">
-            <img alt="patchouli" src="images/fumos/patchouli.png" style="width:100%" width="350" height="500">
+        <div class="column zoom ">
+            <img alt="patchouli" height="500" src="images/fumos/patchouli.png" style="width:100%" width="350">
         </div>
-        <div class="column">
-            <img alt="rabit" src="images/fumos/rabit.png" style="width:100%" width="350" height="500">
+        <div class="column zoom">
+            <img alt="rabit" height="500" src="images/fumos/rabit.png" style="width:100%" width="350">
         </div>
-        <div class="column">
-            <img alt="baka" src="images/fumos/baka.png" style="width:100%" width="350" height="500">
+        <div class="column zoom">
+            <img alt="baka" height="500" src="images/fumos/baka.png" style="width:100%" width="350">
         </div>
     </div>
 </div>
