--- a/Year 2023/WWW Techniques/TouhouProject/index.html
+++ b/Year 2023/WWW Techniques/TouhouProject/index.html
@@ -9,13 +9,13 @@
 <div class="box">
     <div class="header">
         <div>
-            1
+            <img src="images/nyn-nazrin.gif" style="width:80px;height:80px;">
         </div>
         <div>
             Touhou fumos
         </div>
         <div>
-            3
+            <img src="images/nyn-rat-nyn.gif" style="width:80px;height:80px;">
         </div>
     </div>
 </div>
