--- a/Year 2023/WWW Techniques/TouhouProject/index.html
+++ b/Year 2023/WWW Techniques/TouhouProject/index.html
@@ -21,16 +21,16 @@
 </div>
 <div class="box">
     <div class="fumos">
-        <div class="column zoom">
+        <div class="row zoom">
             <img alt="reimu" height="500" src="images/fumos/reimu.png" style="width:100%" width="350">
         </div>
-        <div class="column zoom ">
+        <div class="row zoom">
             <img alt="patchouli" height="500" src="images/fumos/patchouli.png" style="width:100%" width="350">
         </div>
-        <div class="column zoom">
+        <div class="row zoom">
             <img alt="rabit" height="500" src="images/fumos/rabit.png" style="width:100%" width="350">
         </div>
-        <div class="column zoom">
+        <div class="row zoom">
             <img alt="baka" height="500" src="images/fumos/baka.png" style="width:100%" width="350">
         </div>
     </div>
