Added new page with reim

--- a/Year 2023/WWW Techniques/TouhouProject/index.html
+++ b/Year 2023/WWW Techniques/TouhouProject/index.html
@@ -22,7 +22,9 @@
 <div class="box">
     <div class="fumos">
         <div class="row zoom">
-            <img alt="reimu" height="500" src="images/fumos/reimu.png" style="width:100%" width="350">
+            <a href="reimu.html">
+                <img alt="reimu" height="500" src="images/fumos/reimu.png" style="width:100%" width="350">
+            </a>
         </div>
         <div class="row zoom">
             <img alt="patchouli" height="500" src="images/fumos/patchouli.png" style="width:100%" width="350">
