--- a/Year 2023/WWW Techniques/TouhouProject/reimu.html
+++ b/Year 2023/WWW Techniques/TouhouProject/reimu.html
@@ -24,17 +24,28 @@
     <div class="flex-container">
         <div class="flex-item-left">
             <div class="row zoom">
-                <a href="reimu.html">
-                    <img alt="reimu" height="350" src="images/fumos/reimu.png" style="width:100%" width="350">
-                </a>
-                Перші 5 ігор серії були випущені на японських комп'ютерах NEC PC-98 (PC-9801); команда розробників носила назву «Amusement Makers»[20]. Пізніше ZUN покинув Amusement Makers і в 2002 році заснував власну команду під назвою «Team Shanghai Alice». Усі наступні ігри виходили під Windows і значно перевершували попередні частини в плані графіки і звуку. ZUN є єдиним офіційним членом компанії
-                Team Shanghai Alice і сам займається написанням коду і музики, а також дизайном.
+                <img alt="reimu" height="550" src="images/fumos/reimu.png" style="width:100%" width="350">
+                <h2>
+                    [Bonus] Touhou Plush Series 54 [Reimu Hakurei (ver.1.5)]
+                    Fumofumo Reimu. (Sono Ittengo)(Released)
+                </h2>
+                <p>【特典】東方ぬいぐるみシリーズ 54 [博麗霊夢(ver.1.5)]ふもふもれいむ。(そのいってんご)</p>
+                <p>
+                    <span>4,400<span style="font-size: 20px;">JPY</span></span>
+                </p>
             </div>
         </div>
         <p class="flex-item-right">
             Події ігор відбуваються у вигаданому світі Генсокьо (яп. 幻想郷, букв. «Село-ілюзія»),
             що нагадує феодальну Японію і населений фольклорними істотами. У минулому це була непривітна
-            місцевість Японії, наповнена йокаями, які нападали на заблукалих мандрівників і тероризували населення прилеглих земель. В якийсь момент на захист людських поселень стали могутні маги. Врешті люди і йокаї дійшли компромісу і був створений магічний Хакурейський Бар'єр (яп. 博麗大結界), який відділив Генсокьо від навколишнього світу. Ізольований світ продовжував розвиватися і згодом в нього стали прибувати йокаї, для яких світ людей став ворожим, та інші «гості». Тому там, як і раніше, нерідкі сутички, причому не лише між людьми і йокаями, а і йокаїв між собою. Єдиний відомий портал в наш світ перебуває в храмі Хакурей (яп. 博麗神社), розташованому на східному кордоні Генсокьо. Проте численні персонажі і навіть цілі споруди впродовж ігор таємно потрапляли в Генсокьо ззовні
+            місцевість Японії, наповнена йокаями, які нападали на заблукалих мандрівників і тероризували населення
+            прилеглих земель. В якийсь момент на захист людських поселень стали могутні маги. Врешті люди і йокаї дійшли
+            компромісу і був створений магічний Хакурейський Бар'єр (яп. 博麗大結界), який відділив Генсокьо від
+            навколишнього світу. Ізольований світ продовжував розвиватися і згодом в нього стали прибувати йокаї, для
+            яких світ людей став ворожим, та інші «гості». Тому там, як і раніше, нерідкі сутички, причому не лише між
+            людьми і йокаями, а і йокаїв між собою. Єдиний відомий портал в наш світ перебуває в храмі Хакурей (яп.
+            博麗神社), розташованому на східному кордоні Генсокьо. Проте численні персонажі і навіть цілі споруди
+            впродовж ігор таємно потрапляли в Генсокьо ззовні
             , а підтримувач бар'єру — Юкарі Якумо, може вільно переміщуватися з Генсокьо в наш світ і назад.
         </p>
     </div>
