Reimu was added

--- a/Year 2023/WWW Techniques/TouhouProject/index.html
+++ b/Year 2023/WWW Techniques/TouhouProject/index.html
@@ -22,7 +22,7 @@
 <div class="box">
     <div class="fumos">
         <div class="row zoom">
-            <a href="reimu.html">
+            <a href="src/reimu.html">
                 <img alt="reimu" height="500" src="images/fumos/reimu.png" style="width:100%" width="350">
             </a>
         </div>
@@ -33,7 +33,9 @@
             <img alt="rabit" height="500" src="images/fumos/rabit.png" style="width:100%" width="350">
         </div>
         <div class="row zoom">
-            <img alt="baka" height="500" src="images/fumos/baka.png" style="width:100%" width="350">
+            <a href="src/baka.html">
+                <img alt="baka" height="500" src="images/fumos/baka.png" style="width:100%" width="350">
+            </a>
         </div>
     </div>
 </div>
