--- a/Year 2023/WWW Techniques/TouhouProject/src/baka.html
+++ b/Year 2023/WWW Techniques/TouhouProject/src/baka.html
@@ -2,20 +2,20 @@
 <html lang="en">
 <head>
     <title>Touhou fumos</title>
-    <link href="reimustyle.css" rel="stylesheet" type="text/css"/>
+    <link href="shop-style.css" rel="stylesheet" type="text/css"/>
     <meta charset="UTF-8">
 </head>
 <body>
 <div class="box">
     <div class="header">
         <div>
-            <img src="images/nyn-nazrin.gif" style="width:80px;height:80px;">
+            <img src="../images/nyn-nazrin.gif" style="width:80px;height:80px;">
         </div>
         <div>
             Touhou fumos
         </div>
         <div>
-            <img src="images/nyn-rat-nyn.gif" style="width:80px;height:80px;">
+            <img src="../images/nyn-rat-nyn.gif" style="width:80px;height:80px;">
         </div>
     </div>
 </div>
@@ -24,7 +24,7 @@
     <div class="flex-container">
         <div class="flex-item-left">
             <div class="row zoom">
-                <img alt="reimu" height="550" src="images/fumos/reimu.png" style="width:100%" width="350">
+                <img alt="baka" height="550" src="../images/fumos/baka.png" style="width:100%" width="350">
                 <h2>
                     [Bonus] Touhou Plush Series 54 [Reimu Hakurei (ver.1.5)]
                     Fumofumo Reimu. (Sono Ittengo)(Released)
