--- a/Year 2023/WWW Techniques/TouhouProject/src/reimu.html
+++ b/Year 2023/WWW Techniques/TouhouProject/src/reimu.html
@@ -12,7 +12,7 @@
             <img src="../images/nyn-nazrin.gif" style="width:80px;height:80px;">
         </div>
         <div>
-            Touhou fumos
+            <a href="../index.html">Touhou fumos</a>
         </div>
         <div>
             <img src="../images/nyn-rat-nyn.gif" style="width:80px;height:80px;">
