--- a/Year 2023/WWW Techniques/TouhouProject/index.html
+++ b/Year 2023/WWW Techniques/TouhouProject/index.html
@@ -12,7 +12,7 @@
             <img src="images/nyn-nazrin.gif" style="width:80px;height:80px;">
         </div>
         <div>
-            Touhou fumos
+            <a href="index.html">Touhou fumos</a>
         </div>
         <div>
             <img src="images/nyn-rat-nyn.gif" style="width:80px;height:80px;">
@@ -27,10 +27,15 @@
             </a>
         </div>
         <div class="row zoom">
-            <img alt="patchouli" height="500" src="images/fumos/patchouli.png" style="width:100%" width="350">
+            <a href="src/patchouli.html">
+                <img alt="patchouli" height="500" src="images/fumos/patchouli.png" style="width:100%" width="350">
+            </a>
         </div>
         <div class="row zoom">
-            <img alt="rabit" height="500" src="images/fumos/rabit.png" style="width:100%" width="350">
+            <a href="src/rabit.html">
+                <img alt="rabit" height="500" src="images/fumos/rabit.png" style="width:100%" width="350">
+
+            </a>
         </div>
         <div class="row zoom">
             <a href="src/baka.html">
