JavaScript for stealing your data, cute and funny

--- a/Year 2023/WWW Techniques/TouhouProject/src/baka.html
+++ b/Year 2023/WWW Techniques/TouhouProject/src/baka.html
@@ -12,7 +12,7 @@
             <img src="../images/nyn-nazrin.gif" style="width:80px;height:80px;">
         </div>
         <div>
-            <a href="../index.html">Touhou fumos</a>
+            <a href="index.html">Touhou fumos</a>
         </div>
         <div>
             <img src="../images/nyn-rat-nyn.gif" style="width:80px;height:80px;">
@@ -33,6 +33,9 @@
                 <p>
                     <span>4,400<span style="font-size: 20px;">JPY</span></span>
                 </p>
+                <p>
+                    Delivery price <span><span id="delPrice"></span><span style="font-size: 20px;">JPY</span></span>
+                </p>
             </div>
         </div>
         <p class="flex-item-right">
@@ -51,5 +54,6 @@
     </div>
 </div>
 
+<script src="../main.js"></script>
 </body>
 </html>
