--- a/Year 2023/WWW Techniques/TouhouProject/src/reimu.html
+++ b/Year 2023/WWW Techniques/TouhouProject/src/reimu.html
@@ -33,6 +33,9 @@
                 <p>
                     <span>4,400<span style="font-size: 20px;">JPY</span></span>
                 </p>
+                <p>
+                    Delivery price <span><span id="delPrice"></span><span style="font-size: 20px;">JPY</span></span>
+                </p>
             </div>
         </div>
         <p class="flex-item-right">
@@ -50,6 +53,6 @@
         </p>
     </div>
 </div>
-
+<script src="../main.js"></script>
 </body>
 </html>
