--- a/Year 2023/WWW Techniques/TouhouProject/src/index.html
+++ b/Year 2023/WWW Techniques/TouhouProject/src/index.html
@@ -5,7 +5,7 @@
     <link href="styles.css" rel="stylesheet" type="text/css"/>
     <meta charset="UTF-8">
 </head>
-<body>
+<body id="main">
 <div class="box">
     <div class="header">
         <div>
