--- a/Year 2023/WWW Techniques/TouhouProject/src/baka.html
+++ b/Year 2023/WWW Techniques/TouhouProject/src/baka.html
@@ -26,10 +26,7 @@
         <div class="flex-item-left">
             <div class="row zoom">
                 <img alt="baka" height="550" src="../images/fumos/baka.png" style="width:100%" width="350">
-                <h2>
-                    [Bonus] Touhou Plush Series 54 [Reimu Hakurei (ver.1.5)]
-                    Fumofumo Reimu. (Sono Ittengo)(Released)
-                </h2>
+
                 <p>【特典】東方ぬいぐるみシリーズ 54 [博麗霊夢(ver.1.5)]ふもふもれいむ。(そのいってんご)</p>
                 <p>
                     <span>4,400<span style="font-size: 20px;">JPY</span></span>
@@ -39,19 +36,32 @@
                 </p>
             </div>
         </div>
-        <p class="flex-item-right">
-            Події ігор відбуваються у вигаданому світі Генсокьо (яп. 幻想郷, букв. «Село-ілюзія»),
-            що нагадує феодальну Японію і населений фольклорними істотами. У минулому це була непривітна
-            місцевість Японії, наповнена йокаями, які нападали на заблукалих мандрівників і тероризували населення
-            прилеглих земель. В якийсь момент на захист людських поселень стали могутні маги. Врешті люди і йокаї дійшли
-            компромісу і був створений магічний Хакурейський Бар'єр (яп. 博麗大結界), який відділив Генсокьо від
-            навколишнього світу. Ізольований світ продовжував розвиватися і згодом в нього стали прибувати йокаї, для
-            яких світ людей став ворожим, та інші «гості». Тому там, як і раніше, нерідкі сутички, причому не лише між
-            людьми і йокаями, а і йокаїв між собою. Єдиний відомий портал в наш світ перебуває в храмі Хакурей (яп.
-            博麗神社), розташованому на східному кордоні Генсокьо. Проте численні персонажі і навіть цілі споруди
-            впродовж ігор таємно потрапляли в Генсокьо ззовні
-            , а підтримувач бар'єру — Юкарі Якумо, може вільно переміщуватися з Генсокьо в наш світ і назад.
-        </p>
+        <div class="flex-item-right">
+            <dl>
+                <dt>
+                    <h1>Information</h1>
+                </dt>
+                <dd>
+                    <h3>Touhou Plush Series [Cirno] FumoFumo Cirno. (Medium Size Ver.)(Pre-order)</h3>
+                </dd>
+                <dd>
+                    <h4>東方ぬいぐるみシリーズ [チルノ] ふもふもちるの。(まんなかさいず)</h4>
+                </dd>
+                <dt>
+                    <h1>Details</h1>
+                </dt>
+                <dd>
+                    <h4>40cm tall FumoFumo plushies are here!</h4>
+                </dd>
+                <dd>
+                    <h4>Even the character's outfit is carefully recreated!</h4>
+                </dd>
+                <dd>
+                    <h4>Enjoy displaying it alongside the 20cm size plushies of the series!</h4>
+                </dd>
+
+            </dl>
+        </div>
     </div>
 </div>
 </body>
