Button were added!

--- a/Year 2023/WWW Techniques/TouhouProject/src/baka.html
+++ b/Year 2023/WWW Techniques/TouhouProject/src/baka.html
@@ -26,14 +26,15 @@
         <div class="flex-item-left">
             <div class="row zoom">
                 <img alt="baka" height="550" src="../images/fumos/baka.png" style="width:100%" width="350">
-
-                <p>【特典】東方ぬいぐるみシリーズ 54 [博麗霊夢(ver.1.5)]ふもふもれいむ。(そのいってんご)</p>
                 <p>
                     <span>4,400<span style="font-size: 20px;">JPY</span></span>
                 </p>
                 <p>
                     Delivery price <span><span id="delPrice"></span><span style="font-size: 20px;">JPY</span></span>
                 </p>
+
+                <button class="button button1">Green</button>
+
             </div>
         </div>
         <div class="flex-item-right">
