--- a/Year 2023/WWW Techniques/TouhouProject/src/baka.html
+++ b/Year 2023/WWW Techniques/TouhouProject/src/baka.html
@@ -13,7 +13,7 @@
             <img src="../images/nyn-nazrin.gif" style="width:80px;height:80px;">
         </div>
         <div>
-            <a href="index.html">Touhou fumos</a>
+            <a href="index.html">Cirno fumo</a>
         </div>
         <div>
             <img src="../images/nyn-rat-nyn.gif" style="width:80px;height:80px;">
@@ -33,7 +33,7 @@
                     Delivery price <span><span id="delPrice"></span><span style="font-size: 20px;">JPY</span></span>
                 </p>
 
-                <button class="button button1">Green</button>
+                <button class="button button1"></button>
 
             </div>
         </div>
