--- a/Year 2023/WWW Techniques/TouhouProject/src/baka.html
+++ b/Year 2023/WWW Techniques/TouhouProject/src/baka.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Touhou fumos</title>
+    <title>Cirno</title>
     <link href="shop-style.css" rel="stylesheet" type="text/css"/>
     <meta charset="UTF-8">
     <script src="../main.js"></script>
@@ -26,15 +26,16 @@
         <div class="flex-item-left">
             <div class="row zoom">
                 <img alt="baka" height="550" src="../images/fumos/baka.png" style="width:100%" width="350">
-                <p>
-                    <span>4,400<span style="font-size: 20px;">JPY</span></span>
+                <p style="margin: 10px">
+                    Product price: <span id="prodPrice"></span><span style="font-size: 20px;">JPY</span>
                 </p>
                 <p>
-                    Delivery price <span><span id="delPrice"></span><span style="font-size: 20px;">JPY</span></span>
+                    Delivery price: <span id="delPrice"></span><span style="font-size: 20px;">JPY</span>
                 </p>
-
+                <p>
+                    Total price: <span id="totalPrice"></span><span style="font-size: 20px;">JPY</span>
+                </p>
                 <button class="button button1"></button>
-
             </div>
         </div>
         <div class="flex-item-right">
