--- a/Year 2023/WWW Techniques/TouhouProject/src/baka.html
+++ b/Year 2023/WWW Techniques/TouhouProject/src/baka.html
@@ -13,7 +13,7 @@
             <img src="../images/nyn-nazrin.gif" style="width:80px;height:80px;">
         </div>
         <div>
-            <a href="index.html">Cirno fumo</a>
+            <a href="index.html">Touhou fumos</a>
         </div>
         <div>
             <img src="../images/nyn-rat-nyn.gif" style="width:80px;height:80px;">
