--- a/Year 2023/WWW Techniques/TouhouProject/src/index.html
+++ b/Year 2023/WWW Techniques/TouhouProject/src/index.html
@@ -33,7 +33,7 @@
         </div>
         <div class="row zoom">
             <a href="rabit.html">
-                <img alt="rabit" height="500" src="../images/fumos/rabit.png" style="width:100%" width="350">
+                <img alt="rabit" height="500" src="../images/fumos/reisen.png" style="width:100%" width="350">
             </a>
         </div>
         <div class="row zoom">
