--- a/Year 2023/WWW Techniques/TouhouProject/src/rabit.html
+++ b/Year 2023/WWW Techniques/TouhouProject/src/rabit.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Touhou fumos</title>
+    <title>Reisen</title>
     <link href="shop-style.css" rel="stylesheet" type="text/css"/>
     <meta charset="UTF-8">
+    <script src="../main.js"></script>
 </head>
 <body>
 <div class="box">
@@ -24,25 +25,45 @@
     <div class="flex-container">
         <div class="flex-item-left">
             <div class="row zoom">
-                <img alt="reimu" height="550" src="../images/fumos/rabit.png" style="width:100%" width="350">
-                <h2>
-                    [Bonus] Touhou Plush Series 54 [Reimu Hakurei (ver.1.5)]
-                    Fumofumo Reimu. (Sono Ittengo)(Released)
-                </h2>
-                <p>【特典】東方ぬいぐるみシリーズ 54 [博麗霊夢(ver.1.5)]ふもふもれいむ。(そのいってんご)</p>
-                <p>
-                    <span>4,400<span style="font-size: 20px;">JPY</span></span>
+                <img alt="baka" height="550" src="../images/fumos/reisen.png" style="width:100%" width="350">
+                <p style="margin: 10px">
+                    Product price: <span id="prodPrice"></span><span style="font-size: 20px;">JPY</span>
                 </p>
                 <p>
-                    Delivery price <span><span id="delPrice"></span><span style="font-size: 20px;">JPY</span></span>
+                    Delivery price: <span id="delPrice"></span><span style="font-size: 20px;">JPY</span>
                 </p>
+                <p>
+                    Total price: <span id="totalPrice"></span><span style="font-size: 20px;">JPY</span>
+                </p>
+                <button class="button button1"></button>
             </div>
         </div>
-        <p class="flex-item-right">
-            dsdsds
-        </p>
+        <div class="flex-item-right">
+            <dl>
+                <dt>
+                    <h1>Information</h1>
+                </dt>
+                <dd>
+                    <h3>[Bonus] Touhou Plush Series 21 Reisen Udongein Inaba FumoFumo Udonge.(Pre-order)</h3>
+                </dd>
+                <dd>
+                    <h4>【特典】東方ぬいぐるみシリーズ 21 鈴仙・優曇華院・イナバ ふもふもうどんげ。</h4>
+                </dd>
+                <dt>
+                    <h1>Details</h1>
+                </dt>
+                <dd>
+                    <h4>40cm tall FumoFumo plushies are here!</h4>
+                </dd>
+                <dd>
+                    <h4>Even the character's outfit is carefully recreated!</h4>
+                </dd>
+                <dd>
+                    <h4>Enjoy displaying it alongside the 20cm size plushies of the series!</h4>
+                </dd>
+            </dl>
+        </div>
     </div>
 </div>
-<script src="../main.js"></script>
 </body>
 </html>
