--- a/Year 2023/WWW Techniques/TouhouProject/src/index.html
+++ b/Year 2023/WWW Techniques/TouhouProject/src/index.html
@@ -5,7 +5,8 @@
     <link href="styles.css" rel="stylesheet" type="text/css"/>
     <meta charset="UTF-8">
 </head>
-<body id="main">
+
+<body>
 <div class="box">
     <div class="header">
         <div>
@@ -19,6 +20,7 @@
         </div>
     </div>
 </div>
+
 <div class="box">
     <div class="fumos">
         <div class="row zoom">
@@ -43,5 +45,6 @@
         </div>
     </div>
 </div>
+
 </body>
 </html>
