--- a/Year 2023/WWW Techniques/TouhouProject/src/reimu.html
+++ b/Year 2023/WWW Techniques/TouhouProject/src/reimu.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <script src="../main.js"></script>
 </head>
+
 <body>
 <div class="box">
     <div class="header">
@@ -44,7 +45,8 @@
                     <h1>Information</h1>
                 </dt>
                 <dd>
-                    <h3>[Bonus] Touhou Plush Series 54 [Reimu Hakurei (ver.1.5)] Fumofumo Reimu. (Sono Ittengo)(Released)</h3>
+                    <h3>[Bonus] Touhou Plush Series 54 [Reimu Hakurei (ver.1.5)] Fumofumo Reimu. (Sono
+                        Ittengo)(Released)</h3>
                 </dd>
                 <dd>
                     <h4>【特典】東方ぬいぐるみシリーズ 54 [博麗霊夢(ver.1.5)]ふもふもれいむ。(そのいってんご)</h4>
@@ -65,5 +67,6 @@
         </div>
     </div>
 </div>
+
 </body>
 </html>
