--- a/Year 2023/WWW Techniques/TouhouProject/src/reimu.html
+++ b/Year 2023/WWW Techniques/TouhouProject/src/reimu.html
@@ -26,7 +26,7 @@
     <div class="flex-container">
         <div class="flex-item-left">
             <div class="row">
-                <img alt="baka" height="550" src="../images/fumos/reimu.png" style="width:100%" width="350">
+                <img alt="reimu" height="500" src="../images/fumos/reimu.png" style="width:70%" width="350">
                 <p style="margin: 10px">
                     Product price: <span id="prodPrice"></span><span style="font-size: 20px;">JPY</span>
                 </p>
