--- a/Year 2023/WWW Techniques/TouhouProject/src/reimu.html
+++ b/Year 2023/WWW Techniques/TouhouProject/src/reimu.html
@@ -36,7 +36,11 @@
                 <p>
                     Total price: <span id="totalPrice"></span><span style="font-size: 20px;">JPY</span>
                 </p>
-                <button class="button button1"></button>
+                <button class="button button1" onclick="loading()"></button>
+                <p>
+                    <span id="loading"></span><span id="loadingDots"></span>
+                </p>
+
             </div>
         </div>
         <div class="flex-item-right">
