--- a/Year 2023/WWW Techniques/TouhouProject/src/patchouli.html
+++ b/Year 2023/WWW Techniques/TouhouProject/src/patchouli.html
@@ -25,7 +25,7 @@
     <div class="flex-container">
         <div class="flex-item-left">
             <div class="row">
-                <img alt="baka" height="550" src="../images/fumos/patchouli.png" style="width:100%" width="350">
+                <img alt="baka" height="500" src="../images/fumos/patchouli.png" style="width:70%" width="350">
                 <p style="margin: 10px">
                     Product price: <span id="prodPrice"></span><span style="font-size: 20px;">JPY</span>
                 </p>
@@ -35,7 +35,10 @@
                 <p>
                     Total price: <span id="totalPrice"></span><span style="font-size: 20px;">JPY</span>
                 </p>
-                <button class="button button1"></button>
+                <button class="button button1" onclick="loading()"></button>
+                <p>
+                    <span id="loading"></span><span id="loadingDots"></span>
+                </p>
             </div>
         </div>
         <div class="flex-item-right">
