--- a/year-2023/www-techniques/touhou-project/src/index.html
+++ b/year-2023/www-techniques/touhou-project/src/index.html
@@ -13,7 +13,7 @@
             <img src="../images/nyn-nazrin.gif" style="width:80px;height:80px;">
         </div>
         <div>
-            <a href="index.html">Touhou fumos</a>
+            <a href="index.html"><span style="text-align: center">Touhou fumos</span></a>
         </div>
         <div>
             <img src="../images/nyn-rat-nyn.gif" style="width:80px;height:80px;">
