Fumos size change

--- a/year-2023/www-techniques/touhou-project/src/index.html
+++ b/year-2023/www-techniques/touhou-project/src/index.html
@@ -25,22 +25,28 @@
     <div class="fumos">
         <div class="row zoom">
             <a href="reimu.html">
-                <img alt="reimu" height="500" src="../images/fumos/reimu.png" style="width:100%" width="350">
+                <img alt="reimu" height="500"
+                     src="../images/fumos/reimu.png" width="350">
             </a>
         </div>
         <div class="row zoom">
             <a href="patchouli.html">
-                <img alt="patchouli" height="500" src="../images/fumos/patchouli.png" style="width:100%" width="350">
+                <img alt="patchouli" height="500"
+                     src="../images/fumos/patchouli.png" width="350">
             </a>
         </div>
         <div class="row zoom">
             <a href="rabit.html">
-                <img alt="rabit" height="500" src="../images/fumos/reisen.png" style="width:100%" width="350">
+                <img alt="rabit" height="500"
+                     src="../images/fumos/reisen.png" width="350">
             </a>
         </div>
         <div class="row zoom">
             <a href="baka.html">
-                <img alt="baka" height="500" src="../images/fumos/baka.png" style="width:100%" width="350">
+                <img alt="baka"
+                     height="500"
+                     src="../images/fumos/baka.png"
+                     width="350">
             </a>
         </div>
     </div>
