www tech: box rework

--- a/year-2023/www-techniques/touhou-project/src/index.html
+++ b/year-2023/www-techniques/touhou-project/src/index.html
@@ -25,28 +25,26 @@
     <div class="fumos">
         <div class="row zoom">
             <a href="reimu.html">
-                <img alt="reimu" height="500"
-                     src="../images/fumos/reimu.png" width="350">
+                <img alt="reimu"
+                     src="../images/fumos/reimu.png" >
             </a>
         </div>
         <div class="row zoom">
             <a href="patchouli.html">
-                <img alt="patchouli" height="500"
-                     src="../images/fumos/patchouli.png" width="350">
+                <img alt="patchouli"
+                     src="../images/fumos/patchouli.png" >
             </a>
         </div>
         <div class="row zoom">
             <a href="rabit.html">
-                <img alt="rabit" height="500"
-                     src="../images/fumos/reisen.png" width="350">
+                <img alt="rabit"
+                     src="../images/fumos/reisen.png" >
             </a>
         </div>
         <div class="row zoom">
             <a href="baka.html">
                 <img alt="baka"
-                     height="500"
-                     src="../images/fumos/baka.png"
-                     width="350">
+                     src="../images/fumos/baka.png">
             </a>
         </div>
     </div>
