www tech: buttons were added

--- a/year-2023/www-techniques/touhou-project/src/index.html
+++ b/year-2023/www-techniques/touhou-project/src/index.html
@@ -26,19 +26,19 @@
         <div class="row zoom">
             <a href="reimu.html">
                 <img alt="reimu"
-                     src="../images/fumos/reimu.png" >
+                     src="../images/fumos/reimu.png">
             </a>
         </div>
         <div class="row zoom">
             <a href="patchouli.html">
                 <img alt="patchouli"
-                     src="../images/fumos/patchouli.png" >
+                     src="../images/fumos/patchouli.png">
             </a>
         </div>
         <div class="row zoom">
             <a href="rabit.html">
                 <img alt="rabit"
-                     src="../images/fumos/reisen.png" >
+                     src="../images/fumos/reisen.png">
             </a>
         </div>
         <div class="row zoom">
@@ -48,6 +48,35 @@
             </a>
         </div>
     </div>
+</div>
+
+<div class="box">
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="footer-content">
+                <img alt="baka"
+                     src="../images/buttons/anybrowser.png">
+                <img alt="baka"
+                     src="../images/buttons/emacs.png">
+                <img alt="baka"
+                     src="../images/buttons/icon03.gif">
+                <img alt="baka"
+                     src="../images/buttons/linux.png">
+                <img alt="baka"
+                     src="../images/buttons/niceButton.png">
+                <img alt="baka"
+                     src="../images/buttons/pb.gif">
+                <img alt="baka"
+                     src="../images/buttons/shrimpzone.gif">
+                <img alt="baka"
+                     src="../images/buttons/tocxjo.gif">
+                <img alt="baka"
+                     src="../images/buttons/browser7.gif">
+                <img alt="baka"
+                     src="../images/buttons/i-love-fish.png">
+            </div>
+        </div>
+    </footer>
 </div>
 
 </body>
