www tech: added footer to all fumos individuals

--- a/year-2023/www-techniques/touhou-project/src/index.html
+++ b/year-2023/www-techniques/touhou-project/src/index.html
@@ -51,29 +51,19 @@
 </div>
 
 <div class="box">
-    <footer class="footer">
+    <footer>
         <div class="footer-container">
             <div class="footer-content">
-                <img alt="baka"
-                     src="../images/buttons/anybrowser.png">
-                <img alt="baka"
-                     src="../images/buttons/emacs.png">
-                <img alt="baka"
-                     src="../images/buttons/icon03.gif">
-                <img alt="baka"
-                     src="../images/buttons/linux.png">
-                <img alt="baka"
-                     src="../images/buttons/niceButton.png">
-                <img alt="baka"
-                     src="../images/buttons/pb.gif">
-                <img alt="baka"
-                     src="../images/buttons/shrimpzone.gif">
-                <img alt="baka"
-                     src="../images/buttons/tocxjo.gif">
-                <img alt="baka"
-                     src="../images/buttons/browser7.gif">
-                <img alt="baka"
-                     src="../images/buttons/i-love-fish.png">
+                <img src="../images/buttons/anybrowser.png">
+                <img src="../images/buttons/emacs.png">
+                <img src="../images/buttons/icon03.gif">
+                <img src="../images/buttons/linux.png">
+                <img src="../images/buttons/niceButton.png">
+                <img src="../images/buttons/pb.gif">
+                <img src="../images/buttons/shrimpzone.gif">
+                <img src="../images/buttons/tocxjo.gif">
+                <img src="../images/buttons/browser7.gif">
+                <img src="../images/buttons/i-love-fish.png">
             </div>
         </div>
     </footer>
