--- a/year-2023/www-techniques/touhou-project/src/patchouli.html
+++ b/year-2023/www-techniques/touhou-project/src/patchouli.html
@@ -69,5 +69,23 @@
         </div>
     </div>
 </div>
+<div class="box">
+    <footer>
+        <div class="footer-container">
+            <div class="footer-content">
+                <img src="../images/buttons/anybrowser.png">
+                <img src="../images/buttons/emacs.png">
+                <img src="../images/buttons/icon03.gif">
+                <img src="../images/buttons/linux.png">
+                <img src="../images/buttons/niceButton.png">
+                <img src="../images/buttons/pb.gif">
+                <img src="../images/buttons/shrimpzone.gif">
+                <img src="../images/buttons/tocxjo.gif">
+                <img src="../images/buttons/browser7.gif">
+                <img src="../images/buttons/i-love-fish.png">
+            </div>
+        </div>
+    </footer>
+</div>
 </body>
 </html>
